--- a/public_html/css/estilosSecundario.css
+++ b/public_html/css/estilosSecundario.css
@@ -24,18 +24,20 @@ p{
     text-align: justify;
 }
 section {
-    width: 100%;
+    width: 70%;
     /*background: #ccc;*/
     float: left;
     overflow: auto;
     padding-bottom: 60px;
     padding-top:30px;
     position: absolute;
+    text-align: justify;   
 }
 aside {
     float: right;
-    width: 19%;
-    border: 3px solid #ccc;;
+    width: 25%;
+    border: 2px solid #cccccc;
+    text-align: justify;
     /*Si quisieramos ocultar el contenido relacionado pondriamos visibility a hidden*/
     /*visibility: hidden;*/
 }
