--- a/public_html/css/estiloEmail.css
+++ b/public_html/css/estiloEmail.css
@@ -106,5 +106,8 @@ textarea{
 .icon-upload{
     background: white;
 }
+.icon-crossd{
+    background: white;
+}
 /**********************************/
 
