--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -16,8 +16,8 @@ body {
     position: relative;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 1.5em;
+ 
 }
-
 .estiloFuente{
     font-family: "Georgia, Times New Roman, serif";
 }
@@ -30,32 +30,45 @@ header {
     background-position: top;
     padding: 0.2em;
 }
+#divFooter{
+    margin: auto;
+     display: flex;
+     width: 100%;
+     height: auto;   
+     position: relative;
+     float: bottom;
+}
 footer {
     background-color: black; 
     width: 100%;
     color: white;
-    float: end;
-    height:64px;
-    margin-top: -64px;
-    clear: both;
+    float: bottom;
+    clear:both;
+    margin-top: -50px;
+    height:50px;
     text-align: center;
 }
 @media only screen and (max-width:620px) /* For mobile phones: */
 {
-    .cabeceraPrincipal, .divContAsidSec, .piePagina{ width: 100%}
+    #cabeceraPrincipal, #divContAsidSec, #divFooter{ width: 100%}
 }
 
 /*===============Estilo barra de navegacion de los dropdown====================*/
 .divContAsidSec{
      margin: auto;
+     display: flex;
+     width: auto;
+     height: auto;
+     position: relative;
 }
 aside.container{
     width: 25%;
     height: auto;
-    border: 5px solid gray;
+    /*border: 5px solid gray;*/
     float: left;
     clear: left;  
     margin: auto;
+    margin-top: 2%;
 }
 nav {
     float: left;
@@ -77,22 +90,21 @@ nav ul a {
 .containerSection {
     width: 72%;
     height: 400px;
-    border: 5px solid gray;
+    border-left:#999999;
     float: right;
     clear: right;
     display: flex;
     margin: auto;
+    
 }
 iframe { 
-    margin:auto; 
+    margin: auto; 
     padding: auto; 
     width: 100%;
     height: 100%; 
     display:block; 
     border:none;
-    /*text-align: center;*/
 }
-
 /*============Barra Redes Sociales==========================*/
 .social-bar {
     left: 0;
