--- a/public_html/css/estilosSecundario.css
+++ b/public_html/css/estilosSecundario.css
@@ -6,8 +6,24 @@ and open the template in the editor.
 /* 
     Author     : Mairelis Arroyo
 */
-
-/*==========Estilo Header y footer========================*/
+@charset "UTF-8";
+/*Eliminamos los margenes y paddings que agrega el navegador por defecto*/
+*{
+    box-sizing: border-box;
+}
+body {
+    margin:0;
+    padding:0;
+    width: 100%;
+    height: 100%;
+    border:0;
+    outline:none;
+    position: relative;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 1.5em;
+ 
+}
+/*==========Estilo Header========================*/
 header{
     background-color: #F8F8FF;
     color: #E9967A;
@@ -45,7 +61,7 @@ p{
     float: left;
 
 }
-aside {
+#asideMisVis {
     float: right;
     width: 35%;
     border-left: 2px solid #cccccc;
@@ -79,7 +95,7 @@ figure {
 li{
     list-style: none;
 }
-/*============Barra Redes Sociales==========================*/
+/*============iconos==========================*/
 .icon {
     color: white;
     text-decoration: none;
@@ -98,4 +114,63 @@ li{
 .icon-google{
     background: #E83028;
 }
-/*========================================================*/
+/*===============Estilos Form Admision=========================================*/
+h1{
+    text-align: center;
+    font-size: 1.1em
+}
+#ladoIzq{
+    float: left;
+    clear: left;
+    width: 35%;
+    display: inline;
+    margin: auto;
+    height: auto;
+}
+#ladoDer{
+    float: right;
+    clear: right;
+    width: 65%;
+    text-align: left;
+    height: auto;
+}
+label {
+    display: inline-block;
+    width: 230px;
+    text-align: right;
+    margin: 5px;
+    float: left;
+    clear: left;
+}
+input{
+    width: 500px;
+    height: 2em;
+    border: 1px solid black;
+    maxlength: 50;
+    margin: 5px;
+    float: right;
+    clear: righ;
+}
+input.checkbox{
+    float: right;
+    clear: righ;
+}
+#btEnviar
+{
+    float:right;
+    border: 2px solid #333;
+    border-radius: 5px;
+    background: none;
+    cursor: pointer;
+    width: 200px;
+    height: 3em;
+    font: bold .8em sans-serif;
+}
+/*
+
+
+
+
+
+
+*/
