--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -12,69 +12,80 @@ body {
     width: 100%;
     height: 100%;
     border:0;
-    outline:none;
     position: relative;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 1.5em;
- 
+    font-family: Helvetica, Arial, sans-serif; 
 }
 /*==========Estilo Header y footer========================*/
 header {
     background-color: #F8F8FF;
     color: #E9967A;
-    clear: left;
+    clear: both;
     text-align: center;
     background-position: top;
     padding: 0.2em;
 }
-#divFooter{
+.divFooter{
     margin: auto;
-     display: flex;
-     width: 100%;
-     height: auto;   
-     position: relative;
-     float: bottom;
+    display: flex;
+    width: 100%;
+    height: auto;   
+    position: relative;
+    float: bottom;
+    clear: both;
+    z-index: 0;
 }
 footer {
     background-color: black; 
     width: 100%;
     color: white;
-    float: bottom;
-    clear:both;
     margin-top: -50px;
     height:50px;
     text-align: center;
 }
-@media only screen and (max-width:620px) /* For mobile phones: */
-{
-    #cabeceraPrincipal, #divContAsidSec, #divFooter{ width: 100%}
-}
-
+/*@media only screen and (max-width:620px) /* For mobile phones: 
+//{
+//    #cabeceraPrincipal, #divContAsidSec, #divFooter{ width: 100%}
+} */
+/*.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}*/
 /*===============Estilo barra de navegacion de los dropdown====================*/
 .divContAsidSec{
      margin: auto;
-     display: flex;
      width: auto;
      height: auto;
      position: relative;
+     /*display: flex;*/
 }
 aside.container{
-    width: 25%;
+    width: auto;
     height: auto;
-    /*border: 5px solid gray;*/
+    margin: auto;
+    left: 12%;
+    top: 32%;
+    transform: translate(-55%, -55%);
+    -webkit-transform: translate(-50%, -50%);
     float: left;
     clear: left;  
-    margin: auto;
     margin-top: 2%;
+    position: absolute;
+    z-index: 1;
+
+    /*border: 5px solid gray;
+    bottom: 0;*/  
 }
 nav {
-    float: left;
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 1em;
-    float: left;
-    clear: left;
 }
 nav ul {
     list-style-type: none;
@@ -85,14 +96,13 @@ nav ul a {
 }
 /*==========Seccion================*/
 .containerSection {
-    width: 80%;
+    width: 75%;
     height: 400px;
-    border-left:#999999;
     float: right;
     clear: right;
-    display: flex;
     margin: auto;
-    
+    overflow: visible;
+    position: relative;
 }
 iframe { 
     margin: auto; 
@@ -146,9 +156,6 @@ iframe {
 .icon-instagram {
     background: #3F60A5;
 }
-.icon-googleplus {
-    background: #3F60A5;
-}
 .icon-linkedin {
     background: #00a0dc;
 }
@@ -191,6 +198,7 @@ iframe {
 
 .dropdown-submenu:hover>a:after {
     border-left-color: #fff;
+    
 }
 
 .dropdown-submenu.pull-left {
