--- a/public_html/formEmail/estiloFormEmail.css
+++ b/public_html/formEmail/estiloFormEmail.css
@@ -4,7 +4,6 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : Jun 7, 2018, 6:37:53 PM
     Author     : Mairelis Arroyo
 */
 
@@ -22,6 +21,7 @@ font-family: Arial, Verdana, sans-serif;
 }
 h1 {
     color: #636363;
+    font-size: 1.3em;
 }
 a {
     color: #9fcd32;
@@ -34,17 +34,12 @@ form {
     max-width: 500px;
     margin: 0 auto;
 }
-form fieldset {
+#contLabInp {
     background: #f5f5f5;
-}
-form legend {
-    color: red;
-    font-size: 20px;
-    font-weight: bold;
-    text-transform: uppercase;
+    border: 10px solid #f5f5f5;
 }
 form ul {
-    padding: 0px;
+    padding: 1px;
 }
 form ul li {
     list-style-type: none;
@@ -64,7 +59,7 @@ form ul li input[type="text"],form ul li input[type="email"], form ul li textare
     width: 96%;
 }
 form ul li input[type="submit"] {
-    background: red;
+    background: #cecece;
     border: none;
     color: #fff;
     cursor: pointer;
@@ -75,11 +70,11 @@ form ul li input[type="submit"] {
     width: 50%;
 }
 .msn-ok, .msn-ko {
-color: #fff;
-padding: 10px;
-text-align: center;
-width: 65%;
-margin: 20px auto;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    width: 65%;
+    margin: 20px auto;
 }
 .msn-ok {
     background: #22AF22;
